@@ -59,38 +59,6 @@ public class ShapeTextureCache {
 	}
 
 	/**
-	 * Returns a rectangular texture for the provided {@link Color}
-	 * 
-	 * @param color
-	 *            The {@link Color} to fetch a texture of
-	 * @param width
-	 *            The width of the rectangle
-	 * @param height
-	 *            The height of the rectangle
-	 * @param lineHeight
-	 *            The line height of the rectangle
-	 * @return A new {@link Texture} if this is first time it has been
-	 *         requested, otherwise it will return a cached instance of the
-	 *         {@link Texture} for the given {@link Color}
-	 */
-	public Texture getRectangleTexture(Color color, int width, int height,
-			int lineHeight) {
-		int bits = color.toIntBits();
-		String key = "" + bits + "," + width + "," + height + "," + lineHeight;
-		if (!rectangleTextures.containsKey(key)) {
-			Pixmap pixmap = new Pixmap(width + 1, height + 1,
-					Pixmap.Format.RGBA8888);
-			pixmap.setColor(color);
-			for (int i = 0; i < lineHeight; i++) {
-				pixmap.drawRectangle(i, i, width - (i * 2), height - (i * 2));
-			}
-			rectangleTextures.put(key, new Texture(pixmap));
-			pixmap.dispose();
-		}
-		return rectangleTextures.get(key);
-	}
-
-	/**
 	 * Returns a circle texture for the provided {@link Color}
 	 * 
 	 * @param color
