@@ -11,6 +11,7 @@ To change it back set config.targetTimestep to 0.1f
 - Added PerformanceTracker for debugging performance issues
 - Changed default target timestep to 60FPS
 - ActionListeners now receive event details via ActionEvent instance
+- Graphics#drawRect now uses LibGDX ShapeRenderer
 - Fixed Button instances not triggering right-click events
 - Fixed ScrollBox#setMaxHeight triggering unnecessary layouts
 - Fixed Graphics tint value not being set on startup
